# french-real-estate-sql-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  real_estate_analysis_etl.ipynb  requirements.txt  tools.py
SQL/: Create Tables.sql  Requetes demandées.sql  Vérifications après la population.sql
docker/: init-db.sh
