[tool.poetry]
package-mode = false

[project]
name = "projet_3"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdulkadir GUVEN",email = "abguven@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.5"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
